crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__padding_mask_known.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: "format!(\"{display:?}\")"
---
["0", "0", "-inf", "-inf", "-inf", "0", "0", "0", "0", "-inf"]
