crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__pool_type_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: types
---
[
    Max,
    Average,
    GlobalMax,
    GlobalAverage,
    AvgPoolCountIncludePad,
]
