crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__quantization_error_metrics.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: err
---
QuantizationError {
    mse: 0.025000012,
    max_abs_error: 0.20000005,
    snr: 24.77121,
}
