crates/bitnet-kernels/tests/snapshots/snapshot_wave_15__quantize_binary_known_input.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_15.rs
expression: "format!(\"{result:?}\")"
---
[1, -1, 1, 1, -1]
